--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,9 @@
 /storage/*
 !/storage/.keep
 
-/node_modules
+#/node_modules
 /yarn-error.log
 
-/public/assets
 .byebug_history
 
 # Ignore master key for decrypting credentials and more.
